Minor improvements to the swiper-pagination module

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -2,6 +2,7 @@
 $white: #FFFFFF;
 $black: #000000;
 $grey: #E2E2E2;
+$dustyGray: #999999;
 $ming: #407289;
 $christine: #EF6A06;
 $redwood: #5E1F0F;
