--- a/app/styles/modules/_swiper-pagination.scss
+++ b/app/styles/modules/_swiper-pagination.scss
@@ -12,13 +12,13 @@
    display: inline-block;
    @include size(12px);
    border-radius: 50%;
-   background: #999999;
-   box-shadow: 0px 1px 2px #555555 inset;
+   background: $dustyGray;
+   box-shadow: 0 1px 2px #555555 inset;
    margin-right: 10px;
    cursor: pointer;
 }
 
 .swiper-active-switch
 {
-   background: #FFFFFF;
+   background: $white;
 }
